--- a/src/components/Product/ProductInfo/ProductInfo.scss
+++ b/src/components/Product/ProductInfo/ProductInfo.scss
@@ -1,12 +1,10 @@
 @import '../../../styles/utils/vars';
 @import '../../../styles/utils/mixins';
-@import '../../../styles/utils/reset';
 
-.product-info {
-  border-color: transparent;
-  
+.store-product-info {
   &__title {
     @include h1-mobile;
+
     @include onTablet {
       @include h1-desktop;
     }
@@ -19,9 +17,11 @@
     display: flex;
     flex-direction: column;
     margin: 0 auto;
+  }
 
-    @include onTablet {
-    }
+  &__available-colors-icons {
+    height: min-content;
+    margin-bottom: $medium-gap;
   }
 
   &__main-spechs {
@@ -32,7 +32,7 @@
 
   &__select-capacity {
     padding: 24px 0;
-    margin-bottom: 32px;
+    margin-bottom: $large-gap;
     text-align: left;
 
     border-top: 1px solid $secondary-color;
@@ -41,7 +41,8 @@
 
   &__select-capacity-text {
     @include small-text;
-    margin-bottom: 8px;
+
+    margin-bottom: $small-gap;
     color: $secondary-color;
   }
 
@@ -49,19 +50,16 @@
     @include body-text;
 
     width: 56px;
-    height: 32px;
-    margin-right: 8px;
+    height: $large-gap;
+    margin-right: $small-gap;
     background-color: $white-color;
     color: $primary-color;
 
     border: 1px solid $icons-color;
-    border-radius: 4px;
+    border-radius: $border-radius-small;
 
     &:hover {
-      background-color: $primary-color;
-      color: $white-color;
-
-      border-color: transparent;
+      border-color: $primary-color;
     }
 
     &:last-child {
@@ -70,25 +68,30 @@
 
     &-title {
       @include h3-mobile;
-      margin-bottom: 8px;
+
+      @include onTablet {
+        @include h3-desktop;
+      }
+
+      margin-bottom: $small-gap;
     }
 
-    &-list {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: center;
+    &--active {
+      background-color: $primary-color;
+      color: $white-color;
+
+      border-color: transparent;
     }
   }
 
   &__price {
     display: flex;
-    padding: 8px 0;
-    margin: 0;
+    align-items: baseline;
+    padding: $small-gap 0;
 
     &--current {
       @include h2-mobile;
-      padding-right: 8px;
+      padding-right: $small-gap;
 
       @include onTablet {
         @include h2-desktop;
@@ -96,10 +99,9 @@
     }
 
     &--full {
-      font-style: normal;
       font-weight: 600;
       font-size: 22px;
-      line-height: 41px;
+      line-height: 28px;
       color: $secondary-color;
       text-decoration-line: line-through;
     }
@@ -109,33 +111,36 @@
 .available-colors {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 32px;
 
   &__text {
     @include small-text;
-    margin-bottom: 8px;
+
+    padding: 0 0 $small-gap;
     color: $secondary-color;
   }
 
   &__id {
     @include small-text;
+
     color: $secondary-color;
   }
 }
 
 .phone-info {
   &__parameter {
+    @include small-text;
+
     display: flex;
     justify-content: space-between;
-    padding-bottom: 8px;
+    padding-bottom: $small-gap;
 
     &-text {
-      @include small-text;
       color: $secondary-color;
+      margin-right: $medium-gap;
     }
 
     &-size {
-      @include small-text;
+      text-align: right;
     }
   }
 
@@ -144,37 +149,17 @@
   }
 }
 
-.content-img-gallery {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  &__item {
-    width: 50px;
-    height: 50px;
-    margin-right: 8px;
-    border: 1px solid $icons-color;
-    border-radius: 4px;
-  }
-  &__img {
-    width: 50px;
-    height: 50px;
-    padding: 5px;
-  }
-}
-
-.buttons-block {
+.add-to-cart-or-like {
   display: flex;
   justify-content: space-between;
 
   &__add-to-cart {
+    @include buttons-text;
+
     height: 40px;
     width: calc(100% - 48px);
 
-    @include buttons-text;
-    font-family: $global-font;
-    line-height: 37px;
     color: $white-color;
-
     border: 1px solid $accent-color;
     border-radius: $border-radius-standart;
     background-color: $accent-color;
@@ -185,7 +170,7 @@
       box-shadow: $action-button-hover;
     }
 
-    &--in-cart {
+    &--is-in-cart {
       border-color: $elements-color;
       background-color: $white-color;
       color: $accent-color;
@@ -196,13 +181,13 @@
     }
   }
 
-  &__favorites {
+  &__like-icon {
     height: 40px;
     width: 40px;
     border-radius: 50%;
     border: 1px solid $icons-color;
     background-color: $white-color;
-    margin-bottom: 32px;
+    margin-bottom: $large-gap;
 
     background-image: url('../../../img/icons/favorites_add.svg');
     background-repeat: no-repeat;
@@ -210,61 +195,23 @@
 
     cursor: pointer;
 
-    &--remove {
+    &--is-in-favorites {
       background-image: url('../../../img/icons/favorites_remove.svg');
       border-color: $elements-color;
     }
   }
 }
 
-// .buttons-block {
-//   display: flex;
-//   justify-content: space-between;
-//   margin-bottom: 56px;
-
-//   &__add-to-cart {
-//     height: 40px;
-//     width: 77%;
-//     border: 1px solid $accent-color;
-//     font-style: normal;
-//     font-weight: 700;
-//     font-size: 14px;
-//     line-height: 37px;
-//     color: $white-color;
-//     text-align: center;
-
-//     background-color: $accent-color;
-//   }
-
-//   &__like-icon {
-//     height: 40px;
-//     width: 40px;
-//     border-radius: 50%;
-//     border: 1px solid $icons-color;
-//     background-color: $white-color;
-
-//     background-image: url('../../../img/icons/favorites_add.svg');
-//     background-repeat: no-repeat;
-//     background-position: center;
-//   }
-// }
-
 .color-icon {
   border: 1px solid transparent;
   border-radius: 36px;
+  margin: 0 $small-gap 0 0;
 
   &:hover {
     border-color: $icons-color;
   }
 
-  &:active {
+  &--active {
     border-color: $selected-color;
   }
-}
-
-.color-button {
-  width: 32px;
-  height: 32px;
-  border: 2px solid #fff;
-  border-radius: 50%;
 }
