--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -12,6 +12,11 @@ $green-color: #27ae60;
 $red-color: #eb5757;
 $selected-color: #0f0f11;
 
+$small-gap: 8px;
+$medium-gap: 16px;
+$large-gap: 32px;
+
+$border-radius-small: 4px;
 $border-radius-standart: 8px;
 $action-button-hover: 0px 3px 13px rgba(23, 32, 49, 0.4);
 
